--- a/assets/css/css-art.css
+++ b/assets/css/css-art.css
@@ -1,15 +1,14 @@
-.title {
+h1 {
   color: white;
 }
-.container {
+body {
   background: black;
   font-family: "Lora", serif;
   margin: 0;
 }
 
-.rollsContainer {
+.css-art-mini-container {
   align-items: center;
-  background: white;
   border: 1px solid black;
   display: flex;
   flex-direction: row;
@@ -19,7 +18,11 @@
   text-align: center;
 }
 
-.rollContainer {
+.css-art-mini-container.sweet-rolls {
+  background: white;
+}
+
+.css-art-roll-container {
   align-items: center;
   display: flex;
   flex-direction: column;
@@ -28,29 +31,29 @@
   width: 200px;
 }
 
-.artTitle {
+.css-art-title {
   padding: 20px;
 }
 
 /* sweet rolls */
-.sweetRoll {
+.sweet-roll {
   align-items: center;
   display: flex;
   justify-content: center;
 }
 
-.sweetRoll .swirl {
+.sweet-roll .swirl {
   border: 5px solid black;
   position: absolute;
   z-index: 2;
 }
 
-.sweetRoll .swirlColored {
+.sweet-roll .swirl-colored {
   border: 19px solid black;
   position: absolute;
 }
 
-.sweetRoll .smoother {
+.sweet-roll .smoother {
   border-radius: 7px;
   height: 19px;
   margin-left: 10px;
@@ -59,7 +62,7 @@
   width: 19px;
 }
 
-.sweetRoll .dot {
+.sweet-roll .dot {
   border-radius: 2px;
   height: 3px;
   width: 3px;
@@ -67,20 +70,20 @@
   z-index: 3;
 }
 
-.sweetRoll .chunk {
+.sweet-roll .chunk {
   border-radius: 3px;
   height: 7px;
   width: 7px;
 }
 
-.sweetRoll .swirlTiny {
+.sweet-roll .swirl-tiny {
   border-bottom-left-radius: 23px;
   border-right: 0px;
   border-top-left-radius: 22px;
   height: 5px;
   width: 5px;
 }
-.sweetRoll .swirlSmallest {
+.sweet-roll .swirl-smallest {
   border-bottom-right-radius: 34px;
   border-left: 0px;
   border-top-right-radius: 29px;
@@ -89,7 +92,7 @@
   margin-top: 27px;
   width: 25px;
 }
-.sweetRoll .swirlMiddlest {
+.sweet-roll .swirl-middlest {
   border-bottom-left-radius: 44px;
   border-right: 0px;
   border-top-left-radius: 50px;
@@ -98,7 +101,7 @@
   margin-top: -1px;
   width: 30px;
 }
-.sweetRoll .swirlLargest {
+.sweet-roll .swirl-largest {
   border-bottom-right-radius: 83px;
   border-left: 0px;
   border-top-right-radius: 66px;
@@ -108,41 +111,41 @@
   width: 56px;
 }
 
-.sweetRoll .swirlColored.swirlTiny {
+.sweet-roll .swirl-colored.swirl-tiny {
   margin-left: -13px;
 }
-.sweetRoll .swirlColored.swirlSmallest {
+.sweet-roll .swirl-colored.swirl-smallest {
   margin-left: 48px;
 }
-.sweetRoll .swirlColored.swirlMiddlest {
+.sweet-roll .swirl-colored.swirl-middlest {
   margin-left: -45px;
 }
-.sweetRoll .swirlColored.swirlLargest {
+.sweet-roll .swirl-colored.swirl-largest {
   margin-left: 78px;
 }
 
-.sweetRoll .dot:nth-child(1) {
+.sweet-roll .dot:nth-child(1) {
   margin-left: 64px;
   margin-top: 5px;
 }
-.sweetRoll .dot:nth-child(2) {
+.sweet-roll .dot:nth-child(2) {
   margin-left: -62px;
   margin-top: -41px;
 }
-.sweetRoll .dot:nth-child(3) {
+.sweet-roll .dot:nth-child(3) {
   margin-left: 69px;
   margin-top: 21px;
 }
-.sweetRoll .dot:nth-child(4) {
+.sweet-roll .dot:nth-child(4) {
   margin-left: -72px;
   margin-top: 5px;
 }
-.sweetRoll .dot:nth-child(5) {
+.sweet-roll .dot:nth-child(5) {
   margin-left: -5px;
   margin-top: -79px;
 }
 
-.sweetRoll .swirlOutline {
+.sweet-roll .swirl-outline {
   background: radial-gradient(
     circle,
     rgba(240, 172, 80, 1) 54%,
@@ -157,37 +160,37 @@
 }
 
 /* sweet roll specifications */
-.almondTofu .swirlColored {
+.almond-tofu .swirl-colored {
   border-color: #fff2cc;
 }
-.almondTofu .smoother {
+.almond-tofu .smoother {
   background: #fff2cc;
 }
-.almondTofu .dot {
+.almond-tofu .dot {
   background: #ff9980;
 }
 
-.blackSesame .swirlColored {
+.black-sesame .swirl-colored {
   border-color: #34374a;
 }
-.blackSesame .smoother {
+.black-sesame .smoother {
   background: #34374a;
 }
-.blackSesame .dot {
+.black-sesame .dot {
   background: black;
 }
 
-.charSiu .swirlColored {
+.char-siu .swirl-colored {
   border-color: #7e0806;
 }
-.charSiu .smoother {
+.char-siu .smoother {
   background: #7e0806;
 }
-.charSiu .dot {
+.char-siu .dot {
   background: #c1421c;
 }
 
-.chocolate .swirlColored {
+.chocolate .swirl-colored {
   border-color: #472b30;
 }
 .chocolate .smoother {
@@ -197,31 +200,31 @@
   background: white;
 }
 
-.cinnamon .swirlColored {
+.cinnamon .swirl-colored {
   border-color: #602d12;
 }
 .cinnamon .smoother {
   background: #602d12;
 }
 
-.coconutPeanut .swirlColored {
+.coconut-peanut .swirl-colored {
   border-color: #a17141;
 }
-.coconutPeanut .smoother {
+.coconut-peanut .smoother {
   background: #a17141;
 }
-.coconutPeanut .dot {
+.coconut-peanut .dot {
   background: white;
 }
 
-.eggTart .swirlColored {
+.egg-tart .swirl-colored {
   border-color: #ffcc00;
 }
-.eggTart .smoother {
+.egg-tart .smoother {
   background: #ffcc00;
 }
 
-.egg-yolk .swirlColored {
+.egg-yolk .swirl-colored {
   border-color: orange;
 }
 .egg-yolk .smoother {
@@ -231,65 +234,65 @@
   background: white;
 }
 
-.eightTreasure .swirlColored {
+.eight-treasure .swirl-colored {
   border-color: #7a2312;
 }
-.eightTreasure .smoother {
+.eight-treasure .smoother {
   background: #7a2312;
 }
-.eightTreasure .dot {
+.eight-treasure .dot {
   background: #b38600;
   border: 1px solid #806000;
 }
 
-.lotusEggYolk .swirlColored {
+.lotus-egg-yolk .swirl-colored {
   border-color: #773914;
 }
-.lotusEggYolk .smoother {
+.lotus-egg-yolk .smoother {
   background: #773914;
 }
-.lotusEggYolk .dot {
+.lotus-egg-yolk .dot {
   background: #ea601c;
 }
 
-.lychee .swirlColored {
+.lychee .swirl-colored {
   border-color: #edeeee;
 }
 .lychee .smoother {
   background: #edeeee;
 }
 
-.mangoPudding .swirlColored {
+.mango-pudding .swirl-colored {
   border-color: #ffb84d;
 }
-.mangoPudding .smoother {
+.mango-pudding .smoother {
   background: #ffb84d;
 }
-.mangoPudding .dot {
+.mango-pudding .dot {
   background: orange;
 }
 
-.milkTea .swirlColored {
+.milk-tea .swirl-colored {
   border-color: #c09252;
 }
-.milkTea .smoother {
+.milk-tea .smoother {
   background: #c09252;
 }
-.milkTea .dot {
+.milk-tea .dot {
   background: #282929;
 }
 
-.mungBean .swirlColored {
+.mung-bean .swirl-colored {
   border-color: #6c6534;
 }
-.mungBean .smoother {
+.mung-bean .smoother {
   background: #6c6534;
 }
-.mungBean .dot {
+.mung-bean .dot {
   background: #b9b953;
 }
 
-.osmanthus .swirlColored {
+.osmanthus .swirl-colored {
   border-color: #feb412;
 }
 .osmanthus .smoother {
@@ -299,12 +302,12 @@
   background: #8a6841;
 }
 
-.sweetRice .swirlColored {
+.sweet-rice .swirl-colored {
   border-color: #e9e4d3;
 }
-.sweetRice .smoother {
+.sweet-rice .smoother {
   background: #e9e4d3;
 }
-.sweetRice .dot {
+.sweet-rice .dot {
   background: white;
 }
